STIJ-56: Fixed width so 7 steps are visible at a viewport with of 320px.

--- a/components/31-molecules/building-blocks/form-steps/_form-steps.scss
+++ b/components/31-molecules/building-blocks/form-steps/_form-steps.scss
@@ -108,7 +108,7 @@
 
     display: block;
     position: relative;
-    width: 3rem;
+    width: 2rem;
     line-height: 1.8rem;
     text-indent: -9999px;
     z-index: 10;
